force-app/main/default/objects/Inventory_Transaction__c/fields/Checked_Out_of_Inventory_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_of_Inventory_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checked Out of Inventory By</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>