force-app/main/default/objects/Inventory_Transaction__c/fields/Date_Withdrawn_from_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrawn_from_Inventory__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date Withdrawn from Inventory</label>
    <type>Date</type>
</CustomField>