force-app/main/default/objects/Inventory_Transaction__c/fields/End_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Serial_Number__c</fullName>
    <label>End Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>