force-app/main/default/objects/Inventory_Transaction__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Office to which the items removed from inventory were sent.</description>
    <inlineHelpText>This is the office where the inventory items were sent .</inlineHelpText>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>