force-app/main/default/objects/Inventory_Transaction__c/fields/Quantity_Withdrawn_from_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Withdrawn_from_Inventory__c</fullName>
    <label>Quantity Withdrawn from Inventory</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>