force-app/main/default/objects/Inventory_Transaction__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track that the inventory was received</description>
    <inlineHelpText>Recipient acknowledges inventory was received</inlineHelpText>
    <label>Received</label>
    <type>Checkbox</type>
</CustomField>