force-app/main/default/objects/Inventory_Transaction__c/listViews/Inventory_Transactions_Not_Received.listView-meta.xml
<ListView>
    <fullName>Inventory_Transactions_Not_Received</fullName>
    <columns>NAME</columns>
    <columns>Checked_Out_of_Inventory_By__c</columns>
    <columns>Start_Serial_Number__c</columns>
    <columns>End_Serial_Number__c</columns>
    <columns>Quantity_Withdrawn_from_Inventory__c</columns>
    <columns>Date_Withdrawn_from_Inventory__c</columns>
    <columns>Office__c</columns>
    <columns>Inventory__c</columns>
    <columns>Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Received__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Inventory Trans. Not Received</label>
</ListView>